# tommaso_fiscal_code

./: Cargo.toml  README.md  build.rs  codat.json
src/: lib.rs  main.rs
